<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="address_caps">ADDRESS</string>
    <string name="analysis_activity_subscription_callout_text">tap here for more metrics</string>
    <string name="analysis_cadence_formatter">%1$d rpm</string>
    <string name="analysis_calories_burned_formatter">%1$.0f cals</string>
    <string name="analysis_distance_formatter_km">%1$.2f km</string>
    <string name="analysis_distance_formatter_mi">%1$.2f mi</string>
    <string name="analysis_error_loading_session">There was an error loading your session. Please refresh your sessions and try again.</string>
    <string name="analysis_heart_avg_max_label">Avg / Max</string>
    <string name="analysis_heart_avg_reserve_label">Avg / Reserve</string>
    <string name="analysis_kj_formatter">%1$s kJ</string>
    <string name="analysis_mean_max_1m_mini_label">1m</string>
    <string name="analysis_mean_max_20m_mini_label">20m</string>
    <string name="analysis_mean_max_20s_mini_label">20s</string>
    <string name="analysis_mean_max_5m_mini_label">5m</string>
    <string name="analysis_mean_max_5s_mini_label">5s</string>
    <string name="analysis_overview_new_ftp_formatter">You had a new FTP calculated for this workout of %1$d! Would you like to change from your current FTP of %2$d?</string>
    <string name="analysis_overview_new_ftp_set_formatter">New FTP set based on this workout! Your new FTP is %1$d!</string>
    <string name="analysis_workout_delete_error_message">There was an error connecting to the data store. Please try again later.</string>
    <string name="analysis_zone_heart_rate_percent_formatter">%1$.2f %%</string>
    <string name="analysis_zone_name_aerobic">Aerobic</string>
    <string name="analysis_zone_name_anaerobic">Anaerobic</string>
    <string name="analysis_zone_name_endurance">Endurance</string>
    <string name="analysis_zone_name_neuromuscular">Neuromuscular</string>
    <string name="analysis_zone_name_recovery">Recovery</string>
    <string name="analysis_zone_name_tempo">Tempo</string>
    <string name="analysis_zone_name_threshold">Threshold</string>
    <string name="analysis_zone_name_vo2max">VO2Max</string>
    <string name="analysis_zone_number_formatter">Zone %1$d</string>
    <string name="anaylsis_zone_number_formatter">Zone %d</string>
    <string name="app_name">Kinetic</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="articles_list_fragment_error_message">Failed to get articles</string>
    <string name="articles_list_fragment_no_articles_found">No articles found</string>
    <string name="ask_request_list_failed_request_message">Message failed</string>
    <string name="belvedere_dialog_camera">Camera</string>
    <string name="belvedere_dialog_gallery">Gallery</string>
    <string name="belvedere_fam_desc_collapse_fam">Collapse Floating Action Menu</string>
    <string name="belvedere_fam_desc_expand_fam">Expand Floating Action Menu</string>
    <string name="belvedere_fam_desc_open_gallery">Import file from gallery</string>
    <string name="belvedere_fam_desc_open_google_photos">Import image from Google Photos</string>
    <string name="belvedere_image_stream_file_too_large">File too large</string>
    <string name="belvedere_image_stream_title">Photo library</string>
    <string name="belvedere_image_stream_unknown_app">@string/request_attachment_generic_unknown_app</string>
    <string name="belvedere_permissions_denied">Permissions denied</string>
    <string name="belvedere_sdk_fpa_suffix_v2">.belvedere2.attachments</string>
    <string name="belvedere_stream_item_camera_tile_desc">Import image from camera</string>
    <string name="belvedere_stream_item_select_file_desc">Select file %s</string>
    <string name="belvedere_stream_item_select_image_desc">Select image %s</string>
    <string name="belvedere_stream_item_unselect_file_desc">Unselect file %s</string>
    <string name="belvedere_stream_item_unselect_image_desc">Unselect image %s</string>
    <string name="belvedere_toolbar_desc_collapse">Close image picker</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_title_buyinride">Buy inRIDE</string>
    <string name="button_title_details">Details</string>
    <string name="button_title_displays">Displays</string>
    <string name="button_title_history">History</string>
    <string name="button_title_kineticweb">Kinetic Web</string>
    <string name="button_title_profile">Profile</string>
    <string name="button_title_settings">Settings</string>
    <string name="button_title_sharing">Sharing</string>
    <string name="button_title_submitticket">Submit Ticket</string>
    <string name="button_title_support">Support</string>
    <string name="button_title_troubleshoot">Troubleshoot</string>
    <string name="button_title_tutorial">Tutorial</string>
    <string name="button_title_workout">Workout</string>
    <string name="button_title_workouts">Workouts</string>
    <string name="calendar">Calendar</string>
    <string name="calendar_duration_formatter">Duration: %1$02d:%2$02d</string>
    <string name="calendar_if_formatter">IF: %1$.2f</string>
    <string name="calendar_tss_formatter">TSS: %1$d</string>
    <string name="calibrate_back_disabled">The back button has been disabled to avoid issues when calibrating. Please use the Close button once calibration has completed.</string>
    <string name="cancel">Cancel</string>
    <string name="card">card</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="categories_list_fragment_error_message">Failed to get categories</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkbox_text_hide_popups">Hide Pop-ups</string>
    <string name="checkout">Checkout</string>
    <string name="city_caps">CITY</string>
    <string name="close">Close</string>
    <string name="com.crashlytics.android.build_id">9f2b1e35-8059-4346-a497-8de856937b3e</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="confirmation_message_text">You should receive a confirmation message from Google shortly.</string>
    <string name="downloading_smart_data">"Downloading Smart data.
Please be patient"</string>
    <string name="empty_string">---</string>
    <string name="intensity_factor_short">IF</string>
    <string name="kilojoules_short">KJs</string>
    <string name="minimum_short">Min</string>
    <string name="prop_heart">Heart</string>
    <string name="prop_power_TSS_short">TSS</string>
    <string name="prop_power_normalized_short">Normalized</string>
    <string name="setting_activity_graph_selector_cadence">Cadence</string>
    <string name="setting_activity_graph_selector_power">Power</string>
    <string name="settings_activity_assistants">Assistants</string>
    <string name="settings_activity_auto_lap">Auto Lap</string>
    <string name="settings_activity_auto_lap_help_text">lap markers when entering a new zone</string>
    <string name="settings_activity_difficuly_adjustment">Target Power Adjustment</string>
    <string name="settings_activity_event_cues">Event Cues</string>
    <string name="settings_activity_event_cues_help_text">SFX for pause / intervals / laps / etc.</string>
    <string name="settings_activity_graph_metrics">Graph Metrics</string>
    <string name="settings_activity_hide_popups">Hide Popups</string>
    <string name="settings_activity_hide_popups_help_text">hide interval popups</string>
    <string name="settings_activity_light_theme">Light Theme</string>
    <string name="settings_activity_light_theme_help_text">"light user interface theme (beta).
 Changes occur once you leave this screen"</string>
    <string name="settings_activity_sound">Sound</string>
    <string name="settings_activity_voice_over">Voice Over</string>
    <string name="settings_activity_voice_over_help_text">reads interval popups</string>
    <string name="settings_activity_workout">Workout</string>
    <string name="settings_activity_zone_cues">Zone Cues</string>
    <string name="settings_activity_zone_cues_help_text">SFX when entering a new zone</string>
    <string name="success">Success!</string>
</resources>