<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="?colorFitBg1" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView android:textSize="14.0sp" android:id="@id/workouts_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/settings_activity_workout" android:textAllCaps="true" android:layout_marginStart="8.0dip" />
        <RelativeLayout android:id="@id/difficulty_group" android:background="?colorFitBg0" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_below="@id/workouts_text" android:elevation="8.0dip">
            <TextView android:textSize="18.0sp" android:textColor="?colorFitHeadline" android:id="@id/difficulty_text" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/settings_activity_difficuly_adjustment" android:layout_marginStart="4.0dip" />
            <ImageButton android:id="@id/difficultyZeroButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:tint="?colorFitPrimary" android:layout_toRightOf="@id/difficulty_text" android:layout_alignTop="@id/difficulty_text" android:layout_marginStart="8.0dip" app:srcCompat="@drawable/material_icon_difficulty_reset" />
            <android.support.v7.widget.AppCompatSeekBar android:id="@id/difficultySeekBar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:progress="50" android:layout_below="@id/difficulty_text" android:progressTint="?colorFitPrimary" android:thumbTint="@color/white" />
            <TextView android:textColor="?colorFitPrimary" android:id="@id/difficultyPercentText" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:layout_alignParentTop="true" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <TextView android:textSize="14.0sp" android:id="@id/assistants_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/settings_activity_assistants" android:layout_below="@id/difficulty_group" android:textAllCaps="true" android:layout_marginStart="8.0dip" />
        <RelativeLayout android:id="@id/assistants_group" android:background="?colorFitBg0" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_below="@id/assistants_text" android:elevation="8.0dip">
            <TextView android:textSize="18.0sp" android:textColor="?colorFitHeadline" android:id="@id/graph_metrics_text" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/settings_activity_graph_metrics" android:layout_marginStart="4.0dip" />
            <LinearLayout android:id="@id/graph_view_selector" android:background="@drawable/border_tblr_green" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:layout_below="@id/graph_metrics_text" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip">
                <TextView android:textSize="18.0sp" android:textColor="?colorFitPrimary" android:gravity="center" android:id="@id/powerSwitch" android:padding="4.0dip" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/setting_activity_graph_selector_power" android:layout_weight="1.0" />
                <TextView android:textSize="18.0sp" android:textColor="?colorFitPrimary" android:gravity="center" android:id="@id/heartSwitch" android:padding="4.0dip" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/prop_heart" android:layout_weight="1.0" />
                <TextView android:textSize="18.0sp" android:textColor="?colorFitPrimary" android:gravity="center" android:id="@id/cadenceSwitch" android:padding="4.0dip" android:clickable="true" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/setting_activity_graph_selector_cadence" android:layout_weight="1.0" />
            </LinearLayout>
            <TextView android:textSize="18.0sp" android:textColor="?colorFitHeadline" android:id="@id/hide_popups_text" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/settings_activity_hide_popups" android:layout_below="@id/graph_view_selector" android:layout_marginStart="4.0dip" />
            <TextView android:textSize="12.0sp" android:id="@id/hide_popups_help_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_activity_hide_popups_help_text" android:layout_below="@id/hide_popups_text" android:layout_marginStart="4.0dip" android:layout_alignStart="@id/hide_popups_text" />
            <android.support.v7.widget.SwitchCompat android:id="@id/popupsSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:thumb="@drawable/fit_switch_thumb" android:layout_alignTop="@id/hide_popups_text" android:layout_alignParentEnd="true" app:track="@drawable/fit_switch_track" />
            <TextView android:textSize="18.0sp" android:textColor="?colorFitHeadline" android:id="@id/autolapText" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/settings_activity_auto_lap" android:layout_below="@id/hide_popups_help_text" android:layout_marginStart="4.0dip" />
            <TextView android:textSize="12.0sp" android:id="@id/autolapHint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/settings_activity_auto_lap_help_text" android:layout_below="@id/autolapText" android:layout_marginStart="4.0dip" android:layout_alignStart="@id/autolapText" />
            <android.support.v7.widget.SwitchCompat android:id="@id/autolapSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:thumb="@drawable/fit_switch_thumb" android:layout_alignTop="@id/autolapText" android:layout_alignParentEnd="true" app:track="@drawable/fit_switch_track" />
        </RelativeLayout>
        <TextView android:textSize="14.0sp" android:id="@id/sound_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/settings_activity_sound" android:layout_below="@id/assistants_group" android:textAllCaps="true" android:layout_marginStart="8.0dip" />
        <RelativeLayout android:id="@id/sound_group" android:background="?colorFitBg0" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_below="@id/sound_text" android:elevation="8.0dip">
            <TextView android:textSize="18.0sp" android:textColor="?colorFitHeadline" android:id="@id/event_cues_text" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/settings_activity_event_cues" android:layout_marginStart="4.0dip" />
            <TextView android:textSize="12.0sp" android:id="@id/event_cues_help_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_activity_event_cues_help_text" android:layout_below="@id/event_cues_text" android:layout_marginStart="4.0dip" android:layout_alignStart="@id/event_cues_text" />
            <android.support.v7.widget.SwitchCompat android:id="@id/eventCuesSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:thumb="@drawable/fit_switch_thumb" android:layout_alignTop="@id/event_cues_text" android:layout_alignParentEnd="true" app:track="@drawable/fit_switch_track" />
            <TextView android:textSize="18.0sp" android:textColor="?colorFitHeadline" android:id="@id/voice_over_text" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/settings_activity_voice_over" android:layout_below="@id/event_cues_help_text" android:layout_marginStart="4.0dip" />
            <TextView android:textSize="12.0sp" android:id="@id/voiceOverHelpText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_activity_voice_over_help_text" android:layout_below="@id/voice_over_text" android:layout_marginStart="4.0dip" android:layout_alignStart="@id/voice_over_text" />
            <android.support.v7.widget.SwitchCompat android:id="@id/voiceOverSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:thumb="@drawable/fit_switch_thumb" android:layout_alignTop="@id/voice_over_text" android:layout_alignParentEnd="true" app:track="@drawable/fit_switch_track" />
            <TextView android:textSize="18.0sp" android:textColor="?colorFitHeadline" android:id="@id/zone_cues_text" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/settings_activity_zone_cues" android:layout_below="@id/voiceOverHelpText" android:layout_marginStart="4.0dip" />
            <TextView android:textSize="12.0sp" android:id="@id/zone_cues_help_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/settings_activity_zone_cues_help_text" android:layout_below="@id/zone_cues_text" android:layout_marginStart="4.0dip" android:layout_alignStart="@id/voice_over_text" />
            <android.support.v7.widget.SwitchCompat android:id="@id/zoneCuesSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:thumb="@drawable/fit_switch_thumb" android:layout_alignTop="@id/zone_cues_text" android:layout_alignParentEnd="true" app:track="@drawable/fit_switch_track" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/theme_group" android:background="?colorFitBg0" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_below="@id/sound_group" android:elevation="8.0dip">
            <TextView android:textSize="18.0sp" android:textColor="?colorFitHeadline" android:id="@id/light_theme" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/settings_activity_light_theme" android:layout_marginStart="4.0dip" />
            <TextView android:textSize="12.0sp" android:id="@id/light_theme_helper_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/settings_activity_light_theme_help_text" android:layout_below="@id/light_theme" android:layout_marginStart="4.0dip" android:layout_alignStart="@id/light_theme" />
            <android.support.v7.widget.SwitchCompat android:id="@id/lightThemeSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:thumb="@drawable/fit_switch_thumb" android:layout_alignTop="@id/light_theme" android:layout_alignParentEnd="true" app:track="@drawable/fit_switch_track" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>